# langchain-openvino

./: .gitignore  README.md  pyproject.toml
.github/workflows/: docs.yml
samples/: rag.ipynb  sample.ipynb
src/: utils.py
src/langchain_openvino/: __init__.py  chat_model.py  embeddings.py  utils.py
tests/integration_tests/: test_hugging_face.py  test_optimum_intel.py
tests/unit_tests/: test_chat_model.py  test_embedding_model.py
