[project]
name = "langchain-openvino"
version = "0.1.0"
description = ""
authors = [
    {name = "11happy",email = "soni5happy@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "langchain-core (>=0.3.60,<0.4.0)"
]

[tool.poetry]
packages = [{include = "langchain_openvino", from = "src"}]


[tool.poetry.group.test.dependencies]
pytest = "^8.3.5"
pytest-socket = "^0.7.0"
pytest-asyncio = "^0.26.0"
langchain-tests = "0.3.19"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
